update : add list with drag & drop and checkbox (done or not), uses the same reducer as for note

--- a/src/components/notes/Note.scss
+++ b/src/components/notes/Note.scss
@@ -12,3 +12,11 @@
     outline: none;
   }
 }
+
+@media screen and (max-width: 768px) /*, screen and (max-height: 700px)*/
+{
+  .dialog {
+    width: 100%;
+    height: 100%;
+  }
+}
