--- a/src/components/notes/EditNote.scss
+++ b/src/components/notes/EditNote.scss
@@ -49,3 +49,23 @@ form.edit-note {
   width: 100%;
 }
 
+@media screen and (max-width: 768px) /*, screen and (max-height: 700px)*/
+{
+  .edit-paper {
+    position: relative;
+    padding: 5%;
+    width: 90%;
+    height: 90%;
+    text-align: center;
+
+    .controls {
+      position: absolute;
+      bottom: 50px;
+      right: inherit;
+      left: 50%;
+      transform: translate(-50%, 0);
+
+    }
+  }
+
+}
